Сделал header-main. Сделан header для index.html и для catalog.html

--- a/css/style.css
+++ b/css/style.css
@@ -88,6 +88,7 @@ input[type="radio"].visually-hidden {
 .header-top {
   display: flex;
   align-items: baseline;
+  padding-bottom: 27px;
 }
 
 .header__logo {
@@ -405,4 +406,113 @@ input[type="radio"].visually-hidden {
 
 .cart__link:active {
   color: rgba(0, 0, 0, 0.3);
+}
+
+/*Блок header-main*/
+.header-main {
+  padding-left: 60px;
+  padding-right: 55px;
+  padding-bottom: 163px;
+}
+
+.header-main__site-navigation {
+  display: flex;
+  margin: 0;
+  padding: 0;
+  padding-left:
+}
+
+/*Блок site-navigation*/
+.site-navigation__item {
+  list-style: none;
+
+  font-family: "Gilroy", "Arial", sans-serif;
+  font-weight: 800;
+  font-size: 18px;
+  line-height: 24px;
+  color: #000000;
+  text-transform: uppercase;
+  letter-spacing: 3.6px;
+}
+
+.site-navigation__item:first-child {
+  position: relative;
+  margin-right: 290px;
+  padding-right: 32px;
+}
+
+.site-navigation__item:first-child::after {
+  position: absolute;
+  content: "";
+  width: 16px;
+  height: 2px;
+  top: 11px;
+  left: 231px;
+  background-color: #000000;
+  opacity: 0.3;
+}
+
+.site-navigation__item:first-child::before {
+  position: absolute;
+  content: "";
+  width: 2px;
+  height: 16px;
+  top: 4px;
+  left: 238px;
+  background-color: #000000;
+  opacity: 0.3;
+}
+
+.site-navigation__item:nth-child(2) {
+  margin-right: 34px;
+}
+
+.site-navigation__item:nth-child(3) {
+  margin-right: auto;
+}
+
+.site-navigation__link:hover,
+.site-navigation__link:focus {
+  color: rgba(0, 0, 0, 0.6);
+}
+
+.site-navigation__link:active {
+  color: rgba(0, 0, 0, 0.3);
+}
+
+.site-navigation-item__submenu {
+  margin: 0;
+  padding: 0;
+  padding-top: 22px;
+  padding-left: 60px;
+  padding-right: 60px;
+  padding-bottom: 34px;
+
+  display: flex;
+  flex-wrap: wrap;
+
+  font-family: "Open Sans", "Arial", sans-serif;
+  font-weight: 300;
+  font-size: 15px;
+  line-height: 36px;
+  text-transform: none;
+  letter-spacing: normal;
+
+  position: absolute;
+  width: 1040px;
+  left: -60px;
+  bottom: -164px;
+
+  background-color: #f7e296;
+}
+
+.site-navigation-item__submenu-item {
+  flex-basis: 200px;
+
+  display: flex;
+  flex-direction: column;
+}
+
+.site-navigation-item__submenu-item:nth-child(1) {
+    flex-basis: 240px;
 }
